@startuml
title SO DO LOP 3 TANG - LAP HOP DONG THUE

top to bottom direction
skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 55
skinparam ranksep 75
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #FFFACD
  BorderColor #9B7B7B
}

'=====================
' TANG GIAO DIEN
'=====================
package "TANG GIAO DIEN" as GUI_LAYER #EDF9EC {
  class MHLapHopDongThue #BFE8BA {
    - txtTimKiemPhieuCoc: TextBox
    - grvDanhSachPhieuCoc: GridView
    - dtpNgayBatDau: DateTimePicker
    - dtpNgayKetThuc: DateTimePicker
    - txtGiaThueThang: TextBox
    - txtTienCocDaThu: TextBox
    - cboKyThanhToan: ComboBox
    - chkKhachDaDongYTaiLieu: CheckBox
    - btnLuuXemTruocHopDong: Button
    - btnHuyHopDong: Button
    - btnXacNhanKhachDaKy: Button
    --
    + hienThiForm()
    + nhapTuKhoaTimKiem(tuKhoa: String)
    + chonPhieuCoc(maPhieuCoc: String)
    + nhapThongTinHopDong()
    + clickLuuXemTruocHopDong()
    + clickXacNhanKhachDaKy()
    + clickHuyHopDong()
  }
}

'=====================
' TANG NGHIEP VU
'=====================
package "TANG NGHIEP VU" as BUS_LAYER #FFF9E6 {
  class LapHopDongThue #F4E3A2 {
    + LayDanhSachPhieuCocDaDuyet(text: String): IReadOnlyList<PhieuCoc>
    + LayThongTinPhieuCoc(maPhieuCoc: String): Object
    + TaoHopDong(maPhieuCoc: String, maNV: String, ngayBatDau: DateTime, ngayKetThuc: DateTime, kyThanhToan: int?, giaThue: decimal, maQD: String, dsMaDV: List<string>): HopDong
    + XacNhanKhachDaKy(maHD: String): HopDong
    + HuyHopDong(maHD: String)
  }

  class PhieuCoc #F4E3A2 {
    - MaPhieuCoc: String
    - HanThanhToan: DateTime?
    - HinhThucThue: String
    - SoGiuongThue: int
    - TongTien: decimal
    - ThoiDiemCoc: DateTime
    - TrangThai: String
    - MaKH: String
    - MaPhong: String
    - MaNV: String
    --
    + LayDanhSachDaDuyet(text: string): IReadOnlyList<PhieuCoc>
    + DocChiTiet(maPhieuCoc: string): PhieuCoc
  }

  class HopDong #F4E3A2 {
    - MaHD: String
    - NgayKy: DateTime?
    - NgayBatDau: DateTime
    - NgayKetThuc: DateTime
    - KyThanhToan: int?
    - GiaThue: decimal
    - TrangThai: String
    - MaNV: String
    - MaPhieuCoc: String
  }

  class ThanhVienDangKy #F4E3A2 {
    - MaPhieuCoc: String
    - MaKH: String
    - VaiTro: String
    - TrangThaiDuyet: String
    --
    + LayDanhSachThanhVien(maPhieuCoc: string): IReadOnlyList<ThanhVienDangKy>
  }

  class DichVu #F4E3A2 {
    - MaDV: String
    - TenDV: String
    - DonGia: decimal
    - DonViTinh: String
    - TrangThai: String
    --
    + LayDanhSach(): IReadOnlyList<DichVu>
  }

  class DichVuHopDong #F4E3A2 {
    - MaHD: String
    - MaDV: String
    - DonGiaKyKet: decimal
  }

  class QuyDinh #F4E3A2 {
    - MaQD: String
    - TenQD: String
    - LoaiQD: String
    - DuongDanFile: String
    - NgayApDung: DateOnly
    - NgayKetThuc: DateOnly?
    --
    + LayDanhSach(): IReadOnlyList<QuyDinh>
  }

  class ChinhSachHoanCoc #F4E3A2 {
    - MaChinhSach: String
    - TenChinhSach: String
    - TiLe_ChuaKy: decimal
    - TiLe_TruocHan_NganHan: decimal
    - TiLe_TruocHan_DaiHan: decimal
    - TiLe_DungHan: decimal
    - MocLuuTru: int
    --
    + LayChinhSachDangApDung(ngay: DateOnly): ChinhSachHoanCoc
  }
}

'=====================
' TANG TRUY CAP DU LIEU
'=====================
package "TANG TRUY CAP DU LIEU" as DAL_LAYER #EDF6FC {
  class PhieuCocDB #BFDCF0 {
    + LayDanhSachDaDuyet(text: string): IReadOnlyList<PhieuCoc>
    + DocChiTiet(maPhieuCoc: string): PhieuCoc
  }

  class HopDongDB #BFDCF0 {
    + TonTaiTheoPhieuCoc(maPhieuCoc: string): boolean
    + Them(hd: HopDong)
    + UpdateTrangThai(maHD: string, trangThai: string): boolean
  }

  class ThanhVienDangKyDB #BFDCF0 {
    + LayTheoMaPhieuCoc(maPhieuCoc: string): List<ThanhVienDangKy>
  }

  class DichVuDB #BFDCF0 {
    + LayDanhSach(): IReadOnlyList<DichVu>
  }

  class DichVuHopDongDB #BFDCF0 {
    + Them(maHD: string, maDV: string, donGiaKyKet: decimal)
  }

  class QuyDinhDB #BFDCF0 {
    + LayDanhSach(): IReadOnlyList<QuyDinh>
  }

  class ChinhSachHoanCocDB #BFDCF0 {
    + LayChinhSachDangApDung(ngay: DateOnly): ChinhSachHoanCoc
  }
}

'=====================
' QUAN HỆ (ASSOCIATIONS)
'=====================
MHLapHopDongThue o-- LapHopDongThue

LapHopDongThue o-- PhieuCoc
LapHopDongThue o-- HopDong
LapHopDongThue o-- ThanhVienDangKy
LapHopDongThue o-- DichVu
LapHopDongThue o-- DichVuHopDong
LapHopDongThue o-- QuyDinh
LapHopDongThue o-- ChinhSachHoanCoc

PhieuCoc o-- PhieuCocDB
HopDong o-- HopDongDB
ThanhVienDangKy o-- ThanhVienDangKyDB
DichVu o-- DichVuDB
DichVuHopDong o-- DichVuHopDongDB
QuyDinh o-- QuyDinhDB
ChinhSachHoanCoc o-- ChinhSachHoanCocDB


GUI_LAYER -[hidden]down- BUS_LAYER
BUS_LAYER -[hidden]down- DAL_LAYER
LapHopDongThue -[hidden]down- PhieuCocDB
ChinhSachHoanCoc -[hidden]down- PhieuCocDB
@enduml
